--- a/projtracker.html
+++ b/projtracker.html
@@ -345,7 +345,9 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
         }
 
 
-
+.info h5{
+  text-align: center
+}
 
 
         .right {
