--- a/projtracker.html
+++ b/projtracker.html
@@ -235,7 +235,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       <br /><br />
       <h4> Look and Feel</h4>
       <br />
-      <img class="screens" src="images/designboard.png">
+      <img class="screens" src="images/visdesign.png">
 
       <br /><br />
 
