--- a/projtracker.html
+++ b/projtracker.html
@@ -245,7 +245,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       <br /><br />
       <h4>Final Product</h4>
       <br />
-      <div class="row">
+      <div class="screenrow">
         <div class="column">
           <img class="screens" src="images/projtracker/4340_Mockups-01.png">
           <img class="screens" src="images/projtracker/4340_Mockups-09.png">
@@ -308,7 +308,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
 
       <!-- scoped means only affects this page -->
       <style scoped>
-        .row {
+        .screenrow {
           display: flex;
           flex-wrap: wrap;
           padding: 0 8px;
