--- a/datavis.html
+++ b/datavis.html
@@ -93,6 +93,14 @@ Spring of 2019 I took INFO3300: Data-Driven Web Pages. I worked with a small gro
 
 </div>
 
+
+
+<br /><br />
+<h4>Initial Sketches</h4>
+<br />
+
+<img class = "screens sketch" src ="images/datavissketch.jpg">
+
 <br /><br />
 <h4>Design Process</h4>
 <br />
@@ -101,7 +109,7 @@ Spring of 2019 I took INFO3300: Data-Driven Web Pages. I worked with a small gro
   <b>Spider graph</b>
 </p>
 <p>
-We chose a spider graph for showing this because the data was multivariate against a quantitative category. We mapped the genders on one graph to communicate the difference in self-identified personality traits between the genders and allow for easy comparison between each.  “Males” were colored blue, “females” pink, and “other” in yellow. This was an interesting choice to make because it felt like we were abiding by gender norms, yet these colors communicated each gender clearly, so we left it at that. We chose colors that had the same amounts of greyness/value so that they looked cohesive together. The quantitative personality traits were mapped along the axels of the spider chart, which is conventional for a spider chart. The levels of the chart corresponded to the responses, so a scale from 1-7. We added a legend so that the viewer could understand what each of the colors meant, as well as a legend for the meaning of the 1-7 scale.</p>
+We chose a spider graph here because the data was multivariate against a quantitative category. We mapped the genders on one graph to communicate the difference in self-identified personality traits between the genders and allow for easy comparison between each.  “Males” were colored blue, “females” pink, and “other” in yellow. This was an interesting choice to make because it felt like we were abiding by gender norms, yet these colors communicated each gender clearly, so we left it at that. We chose colors that had the same amounts of greyness/value so that they looked cohesive together. The quantitative personality traits were mapped along the axels of the spider chart, which is conventional for a spider chart. The levels of the chart corresponded to the responses, so a scale from 1-7. We added a legend so that the viewer could understand what each of the colors meant, as well as a legend for the meaning of the 1-7 scale.</p>
 <br />
 
 
@@ -208,6 +216,10 @@ For the bubble chart, we were not able to complete all the correlations we had h
   }
 }
 
+
+.sketch{
+  max-width:500px
+}
 
 </style>
 
