--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                     <h6 style="margin-bottom: 20px"> UX Engineer Intern</h6>
                                     <!-- <a class="button" href="projtracker.html">View</a> -->
                                     <!-- <a class="button underline" href="datavis.html">View</a> -->
-                                    <a class="button underline" href="bofa.html">View</a>
+                                    <a class="button underline" href="bofa">View</a>
                                     </h6>
                                   </div>
                                 </div>
