--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                           </h6>
                                           <h6 style="margin-bottom: 20px"> Data Visualization</h6>
                                           <!-- <a class="button" href="projtracker.html">View</a> -->
-                                          <a class="button underline" href="datavis.html">View</a>
+                                          <a class="button underline" href="mentalhealthvisualization">View</a>
                                         </div>
                                       </div>
                                     </div>
