--- a/mentalhealthvisualization.html
+++ b/mentalhealthvisualization.html
@@ -96,7 +96,7 @@ Spring of 2019 I took INFO3300: Data-Driven Web Pages. I worked with a small gro
 
 
 <br /><br />
-<h4>Initial Sketches</h4>
+<h4>Idea Generation</h4>
 <br />
 
 <img class = "screens sketch" src ="images/datavissketch.jpg">
@@ -129,7 +129,12 @@ For the bubble chart, we were not able to complete all the correlations we had h
 <br />
 
 
+<br /><br />
+<h4> Look and Feel</h4>
+<br />
+<img class="screens visdesign" src="images/datavisdesign.png">
 
+<br /><br />
 
 
 
@@ -175,7 +180,9 @@ For the bubble chart, we were not able to complete all the correlations we had h
 }
 }
 
-
+.visdesign{
+  max-width:900px;
+}
 
 .screens{
   width:100%;
