--- a/iqvia.html
+++ b/iqvia.html
@@ -55,7 +55,7 @@
 <p>
   This summer I had the opportunity to work at IQVIA as a UX Engineer Intern. Through my 10 week internship I worked on various projects, participated in a hackathon, and contributed to a meaningful industry. My main project was to develop a landing page for internal users, with an approximate ROI of $100k. Last but not least, in my second to last week at IQVIA I worked on "Study Optimizer" and independently redesigned the interface.
 
-  Details on my projects and my process are coming soon and some will potentially be NDA. Drop me a message if you want to learn more!
+  Details on my projects and my process are NDA, drop me a message if you want to learn more!
 </p>
 
 
