--- a/projtracker.html
+++ b/projtracker.html
@@ -235,7 +235,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       <br /><br />
       <h4> Look and Feel</h4>
       <br />
-      <img class="screens" src="images/visdesign.png">
+      <img class="screens resize" src="images/visdesign.png">
 
       <br /><br />
 
@@ -366,7 +366,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
         .screens {
           width: 100%;
           height: auto;
-          max-width: 600px;
+          /* max-width: 600px; */
         }
 
 
@@ -377,6 +377,9 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
         }
 
 
+.resize{
+  max-width:600px;
+}
 
 
         @media only screen and (max-width: 600px) {
