--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                   <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
                   </h6>
                   <h6 style="margin-bottom: 20px"> Personal project tracker. </h6>
-                  <a class="button underline" href="projtracker.html">View</a>
+                  <a class="button underline" href="projecttracker.html">View</a>
 
                 </div>
               </div>
