--- a/mentalhealthvisualization.html
+++ b/mentalhealthvisualization.html
@@ -81,7 +81,7 @@ Spring of 2019 I took INFO3300: Data-Driven Web Pages. I worked with a small gro
 
 <br />
 <p>
-  Our visualizations aim to show correlations between symptoms of mental health conditions (such as depression, anxiety, and stress), personality traits, and demographic data among participants of the DASS survey (http://www2.psy.unsw.edu.au/dass/). Throughout our visualizations, we hope to tell the narrative of commonalities amongst certain groups of people in their own identities (including personality and mental health).
+  Our visualizations aim to show correlations between symptoms of mental health conditions (such as depression, anxiety, and stress), personality traits, and demographic data among participants of the <a href = "http://www2.psy.unsw.edu.au/dass/" >DASS Survey.</a> Throughout our visualizations, we hope to tell the narrative of commonalities amongst certain groups of people in their own identities (including personality and mental health).
 </p>
 
 
