--- a/cusd.html
+++ b/cusd.html
@@ -1,7 +1,6 @@
-
-
 <!DOCTYPE html>
 <html lang-"en">
+
 <head>
 
   <!-- Basic Page Needs
@@ -13,6 +12,7 @@
   <meta property="og:title" content="Jintana Cunningham">
   <meta name="author" content="">
 
+
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,57 +20,244 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <script src="https://use.fontawesome.com/62036b53a1.js"></script>
+  <script src="https://use.fontawesome.com/62036b53a1.js"></script>
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/style.css">
 
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script src="assets/js/waypoints.js"></script>
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="../images/favicon.png">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
+
 <body>
 
-<div class="section-title">
+  <div class="section-title">
     <div class="container" style="margin-top: 120px; margin-bottom: 72px">
       <div class="row">
         <div class="twelve columns">
-          <a href="index"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
+          <a href="index">
+            <h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2>
+          </a>
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
             <li class="u-grey"><a target="_blank" href="JintanaResume.pdf">Resume</a></li>
-                <!-- <li class="u-grey"><a href="photography">Photography</a></li> -->
-            <li class="u-grey"><a target="_blank" href="hhttps://www.linkedin.com/in/jintana-cunningham/">LinkedIn</a></li>
-            <li class="u-grey"><a target="_blank" href="mailto:jc2747@cornell.edu">Email</a></li>
+            <!-- <li class="u-grey"><a href="photography">Photography</a></li> -->
+
         </div>
       </div>
     </div>
-</div>
+  </div>
 
-<h4><strong>CUSD </strong></h4>
+  <div class="header">
+    <h3>CUSD</h3>
+  </div>
 
-<div class="indent"
-<p>Our project for the semester was to design and implement a member hub. This would promote communication between members as provide a medium where current and previous members of our project team can exchange with each other.
-</p>
-<blockquote>Persona: Bob, an Information Science major going into his Junior year. Bob is going big and decides to apply to Apple. He thinks of something that could give him an edge over other applicants, and tries to remember the name of that CUSD member who is now working for Apple. Bob only knows that the CUSD alumni is working for Apple, but nothing else. Bob has limited options: he can try to go through the CUSD members FB page to find this person, but there’s no easy way to search for this. Bob’s only option is to try to reach out to current members to see if they remember who the alumni is? What if Bob could search this on a website, and immediately email the alumni and ask for a referral?</blockquote>
+  <!--
+Persuading people through technology is the next social revolution -BJ Fogg-->
+  <div class="info">
+    <h5 style="font-weight: 400">
+
+      “Technology can and should empower individuals to change their behavior for the better.”
+    </h5>
+
+    <br />
+    <img class="screens" src="images/cusdcoverpic.png">
+
+    <br />
+    <p>
+      I work as the lead of cusd. here are some of the materials we have created. </span>.
+    </p>
 
 
-  </p>
-  For my first week I conducted UX research. We needed our website to be accessible so it would be used, and UI/UX can greatly contribute to how often a digital product is utilized</p>
-<p>Following many of the components laid out in Materialize, I created a medium-fidelity wireframe of the website. My main roadblock was designing a filtering system that was intuitive. Luckily, many of my classes are design-centered, so I felt like I understood what I needed to know to design digital interfaces for people</p>
-</div>
 
 
-<p>My first iteration early in the semester: very rough</p>
+
+      <br /><br />
+      <h4>Final Product</h4>
+      <br />
+
+          <img class="screens" src="images/Artboard.png">
 
 
- <img class = "horiz-right" src="images/CUSD.jpg" width="600">
-<p> My second iteration 1 week later : improvements, cleaner</p>
+      <br />
+      <br />
+
+      <p>We used Vue, custom CSS, JSON and Javascript to implement the app.</p>
+
+      <br />
+      <br />
+      <p style="font-weight: bold">Features:</p>
+      <div class="myDivElement">
+        <ul>
+          <li> Emojis change based on the last time you updated the project </li>
+          <li> Integration with Buefy.js calendar to display calendar view</li>
+          <li> Users can choose preset units of measurement, none, or custom</li>
+      </div>
+
+
+      <br /><br />
+      <h4>Reflection and Future Considerations</h4>
+      <br />
+      <p>This app was my first exploration of behavior design. Some of the choices we made, such as the emojis, really resonated with our interviewees during beta testing. These details are what keep users engaged. <br />
+        If we were to work on this project further, it would be interesting to add project tracking analytics as an onboarding experience. <b>The app currently is only supported for mobile, be on the lookout for a web version!</b></p>
+      <br /><br />
+      <br /><br />
+
+
+
+
+
+
+
+
+      <!-- scoped means only affects this page -->
+      <style scoped>
+        .screenrow {
+          display: flex;
+          flex-wrap: wrap;
+          padding: 0 8px;
+        }
+
+        /* Create four equal columns that sits next to each other */
+        .column {
+          flex: 25%;
+          max-width: 25%;
+          padding: 0 8px;
+        }
+
+        .column img {
+          margin-top: 8px;
+          vertical-align: middle;
+          width: 100%;
+        }
+
+
+        /* Responsive layout - makes a two column-layout instead of four columns */
+        @media screen and (max-width: 800px) {
+          .column {
+            flex: 50%;
+            max-width: 50%;
+          }
+        }
+
+        /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+        @media screen and (max-width: 600px) {
+          .column {
+            flex: 100%;
+            max-width: 100%;
+          }
+        }
+
+
+.info h5{
+  text-align: center
+}
+
+
+        .right {
+          padding-left: 400px;
+          text-align: left;
+        }
+
+        @media only screen and (max-width: 600px) {
+          .right {
+            padding-left: 0;
+          }
+        }
+
+
+
+        .screens {
+          width: 100%;
+          height: auto;
+          /* max-width: 600px; */
+        }
+
+
+        @media only screen and (max-width: 600px) {
+          .screens {
+            width: 290px;
+          }
+        }
+
+
+.resize{
+  max-width:600px;
+}
+
+
+        @media only screen and (max-width: 600px) {
+          #myImg {
+            width: 290px;
+          }
+        }
+
+
+
+
+        .myDivElement {
+          display: flex;
+          /* justify-content: center; */
+          width: 100%;
+          position: relative;
+          left: 20px;
+        }
+
+
+        @media only screen and (max-width: 800px) {
+          .info {
+            margin-left: 20px;
+            margin-right: 20px;
+          }
+        }
+      </style>
+
+
+
+      <script>
+        window.onscroll = function() {
+          scrollFunction()
+        };
+
+        function scrollFunction() {
+          if (document.body.scrollTop > 600 || document.documentElement.scrollTop > 600) {
+            document.getElementById("myBtn").style.opacity = "1";
+          } else {
+            document.getElementById("myBtn").style.opacity = "0";
+          }
+        }
+
+        function topFunction() {
+
+          var target = $('#hi');
+          if (target.length) {
+            var top = target.offset().top;
+            $('html,body').animate({
+              scrollTop: top
+            }, 500);
+            return false;
+          }
+        }
+      </script>
+
+
+      <script src="assets/js/jquery.waypoints.min.js"></script>
+      <script src="assets/js/waypoints.js"></script>
+
+
 
 
 </body>
+
 </html>
