--- a/cusd.html
+++ b/cusd.html
@@ -123,41 +123,9 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
 
       <!-- scoped means only affects this page -->
       <style scoped>
-        .screenrow {
-          display: flex;
-          flex-wrap: wrap;
-          padding: 0 8px;
-        }
-
-        /* Create four equal columns that sits next to each other */
-        .column {
-          flex: 25%;
-          max-width: 25%;
-          padding: 0 8px;
-        }
-
-        .column img {
-          margin-top: 8px;
-          vertical-align: middle;
-          width: 100%;
-        }
 
 
-        /* Responsive layout - makes a two column-layout instead of four columns */
-        @media screen and (max-width: 800px) {
-          .column {
-            flex: 50%;
-            max-width: 50%;
-          }
-        }
 
-        /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-        @media screen and (max-width: 600px) {
-          .column {
-            flex: 100%;
-            max-width: 100%;
-          }
-        }
 
 
 .info h5{
@@ -181,7 +149,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
         .screens {
           width: 100%;
           height: auto;
-          /* max-width: 600px; */
+          max-width: 600px;
         }
 
 
