--- a/cusd.html
+++ b/cusd.html
@@ -68,7 +68,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
   <div class="info">
     <h5 style="font-weight: 400">
 
-      “Technology can and should empower individuals to change their behavior for the better.”
+      “Challenging climate change through design”
     </h5>
 
     <br />
