--- a/cusd.html
+++ b/cusd.html
@@ -76,7 +76,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
 
     <br />
     <p>
-      I work as the lead of cusd. here are some of the materials we have created. </span>.
+      I operate as Design Lead of Cornell University Sustainable Design. My team creates design materials to support the rest of the 180-person project team. Here are some of the materials we have created. </span>.
     </p>
 
 
@@ -84,33 +84,22 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
 
 
       <br /><br />
-      <h4>Final Product</h4>
+      <h4>Stickers</h4>
       <br />
 
+      <p>
+        In Spring 2019 OSPRI, another subteam on CUSD, asked MarComm to design kid-friendly postcards for their Earth Day campaign event at the <b>Smithsonian Institution </b>. This campaign was intended for young children around the elementary school level. Its purpose was to spark their passion for sustainability and encourage children to start thinking consciously about the environment at an early age. Working together, MarComm members Sarah and Jintana were able to ideate, iterate upon, and ultimately deliver an engaging set of postcards to aid the OSPRI team’s efforts. I created designs for the OSPRI sticker campaign.
+      </p>
           <img class="screens" src="images/Artboard.png">
 
 
-      <br />
-      <br />
-
-      <p>We used Vue, custom CSS, JSON and Javascript to implement the app.</p>
 
       <br />
       <br />
-      <p style="font-weight: bold">Features:</p>
-      <div class="myDivElement">
-        <ul>
-          <li> Emojis change based on the last time you updated the project </li>
-          <li> Integration with Buefy.js calendar to display calendar view</li>
-          <li> Users can choose preset units of measurement, none, or custom</li>
-      </div>
 
-
-      <br /><br />
-      <h4>Reflection and Future Considerations</h4>
+      <h4>Future Considerations</h4>
       <br />
-      <p>This app was my first exploration of behavior design. Some of the choices we made, such as the emojis, really resonated with our interviewees during beta testing. These details are what keep users engaged. <br />
-        If we were to work on this project further, it would be interesting to add project tracking analytics as an onboarding experience. <b>The app currently is only supported for mobile, be on the lookout for a web version!</b></p>
+      <p>The focus of this semester is to restructure the recruitment process.</p>
       <br /><br />
       <br /><br />
 
@@ -123,10 +112,6 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
 
       <!-- scoped means only affects this page -->
       <style scoped>
-
-
-
-
 
 .info h5{
   text-align: center
@@ -149,7 +134,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
         .screens {
           width: 100%;
           height: auto;
-          max-width: 600px;
+          max-width: 900px;
         }
 
 
@@ -191,37 +176,6 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
         }
       </style>
 
-
-
-      <script>
-        window.onscroll = function() {
-          scrollFunction()
-        };
-
-        function scrollFunction() {
-          if (document.body.scrollTop > 600 || document.documentElement.scrollTop > 600) {
-            document.getElementById("myBtn").style.opacity = "1";
-          } else {
-            document.getElementById("myBtn").style.opacity = "0";
-          }
-        }
-
-        function topFunction() {
-
-          var target = $('#hi');
-          if (target.length) {
-            var top = target.offset().top;
-            $('html,body').animate({
-              scrollTop: top
-            }, 500);
-            return false;
-          }
-        }
-      </script>
-
-
-      <script src="assets/js/jquery.waypoints.min.js"></script>
-      <script src="assets/js/waypoints.js"></script>
 
 
 
