--- a/cusd.html
+++ b/cusd.html
@@ -71,16 +71,23 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       “Challenging climate change through design”
     </h5>
 
-    <br />
-    <img class="screens" src="images/cusdcoverpic.png">
+
 
     <br />
     <p>
       I operate as Design Lead of Cornell University Sustainable Design. My team creates design materials to support the rest of the 180-person project team. Here are some of the materials we have created. </span>.
     </p>
 
+    <br /><br />
+    <h4>Recruitment</h4>
+    <br />
+    <br />
+    <img class="screens" src="images/cusdcoverpic.png">
 
-
+    <br /><br />
+    <h4>Final Exposition</h4>
+    <br />
+    <img class="screens" src="images/cusdcoverpic.png">
 
 
       <br /><br />
@@ -90,6 +97,8 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       <p>
         In Spring 2019 OSPRI, another subteam on CUSD, asked MarComm to design kid-friendly postcards for their Earth Day campaign event at the <b>Smithsonian Institution </b>. This campaign was intended for young children around the elementary school level. Its purpose was to spark their passion for sustainability and encourage children to start thinking consciously about the environment at an early age. Working together, MarComm members Sarah and Jintana were able to ideate, iterate upon, and ultimately deliver an engaging set of postcards to aid the OSPRI team’s efforts. I created designs for the OSPRI sticker campaign.
       </p>
+      <br />
+      <br />
           <img class="screens" src="images/Artboard.png">
 
 
@@ -102,10 +111,6 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       <p>The focus of this semester is to restructure the recruitment process.</p>
       <br /><br />
       <br /><br />
-
-
-
-
 
 
 
