--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
                 <h6 style="margin-bottom: 20px"> I was accepted to the CUSD project team at Cornell University in 2017 and I am currently leading their design team.
                 </h6>
-                <!-- <a class="button underline" href="https://medium.com/@jc2747/designing-a-hub-for-cornell-sustainable-design-b961b7952008">View</a> -->
+                <a class="button underline" href="cusd">View</a>
                 <h6 style="margin-bottom: 20px">Report coming soon.
                 </h6>
               </div>
