--- a/cusd.html
+++ b/cusd.html
@@ -87,7 +87,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
     <br /><br />
     <h4>Final Exposition</h4>
     <br />
-    <img class="screens" src="images/coverpic.png">
+    <img class="screens" src="images/finalexpo.png">
 
 
       <br /><br />
