--- a/cusd.html
+++ b/cusd.html
@@ -95,7 +95,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       <br />
 
       <p>
-        In Spring 2019 OSPRI, another subteam on CUSD, asked MarComm to design kid-friendly postcards for their Earth Day campaign event at the <b>Smithsonian Institution </b>. This campaign was intended for young children around the elementary school level. Its purpose was to spark their passion for sustainability and encourage children to start thinking consciously about the environment at an early age. Working together, MarComm members Sarah and Jintana were able to ideate, iterate upon, and ultimately deliver an engaging set of postcards to aid the OSPRI team’s efforts. I created designs for the OSPRI sticker campaign.
+        In Spring 2019 OSPRI, another subteam on CUSD, asked MarComm to design kid-friendly stickers for their Earth Day campaign event at the <b>Smithsonian Institution </b>. This campaign was intended for young children around the elementary school level. Its purpose was to spark their passion for sustainability and encourage children to start thinking consciously about the environment at an early age. Ultimately I deliver a playful set of stickers to aid the OSPRI team’s efforts. 
       </p>
       <br />
       <br />
