--- a/cusd.html
+++ b/cusd.html
@@ -75,7 +75,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
 
     <br />
     <p>
-      I operate as Design Lead of Cornell University Sustainable Design. My team creates design materials to support the rest of the 180-person project team. Here are some of the materials we have created. </span>.
+      I operate as Design Lead of Cornell University Sustainable Design. I lead 6 design students and help create design materials to support the rest of the 180-person project team. Here are some of the materials we have created. </span>.
     </p>
 
     <br /><br />
@@ -95,7 +95,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       <br />
 
       <p>
-        In Spring 2019 OSPRI, another subteam on CUSD, asked MarComm to design kid-friendly stickers for their Earth Day campaign event at the <b>Smithsonian Institution </b>. This campaign was intended for young children around the elementary school level. Its purpose was to spark their passion for sustainability and encourage children to start thinking consciously about the environment at an early age. Ultimately I deliver a playful set of stickers to aid the OSPRI team’s efforts. 
+        In Spring 2019 OSPRI, another subteam on CUSD, asked MarComm to design kid-friendly stickers for their Earth Day campaign event at the <b>Smithsonian Institution </b>. This campaign was intended for young children around the elementary school level. Its purpose was to spark their passion for sustainability and encourage children to start thinking consciously about the environment at an early age. Ultimately I deliver a playful set of stickers to aid the OSPRI team’s efforts.
       </p>
       <br />
       <br />
@@ -105,12 +105,12 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
 
       <br />
       <br />
-
+<!--
       <h4>Future Considerations</h4>
       <br />
       <p>The focus of this semester is to restructure the recruitment process.</p>
       <br /><br />
-      <br /><br />
+      <br /><br /> -->
 
 
 
