--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
                 </h6>
                 <h6 style="margin-bottom: 20px"> Design exercise </h6>
                 <!-- <a class="button" href="projtracker.html">View</a> -->
-                <h6 style="margin-bottom: 20px">Report coming soon.
-                </h6>
+                <!-- <h6 style="margin-bottom: 20px">Report coming soon.
+                </h6> -->
               </div>
             </div>
           </div>
