--- a/cusd.html
+++ b/cusd.html
@@ -75,7 +75,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
 
     <br />
     <p>
-      I operate as Design Lead of Cornell University Sustainable Design. I lead 6 design students and help create design materials to support the rest of the 180-person project team. Here are some of the materials we have created. </span>.
+      I operate as Design Lead of Cornell University Sustainable Design. I lead 6 design students and help create design materials to support the rest of the 180-person project team. Here are some of the materials we have created.
     </p>
 
     <br /><br />
