--- a/cusd.html
+++ b/cusd.html
@@ -89,6 +89,10 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
     <br />
     <img class="screens" src="images/finalexpo.png">
 
+    <br /><br />
+    <h4>Logos</h4>
+    <br />
+    <img class="screens" src="images/logos.png">
 
       <br /><br />
       <h4>Stickers</h4>
