--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
                 </h6>
                 <!-- <h6 style="margin-bottom: 20px"> I taught myself the know-how to make this website in the summer of 2017, and I have been tinkering with digital interfaces ever since.
                 </h6> -->
-                <h6 style="margin-bottom: 20px">In school, I am a design lead in <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University,</a> as well as a student researcher in the Communication and Technology Lab studying the potential of language-learning through personalized chat-robots. For fun, I am a member of Breadmaking Club and I also lead a pottery studio!</a>
+                <h6 style="margin-bottom: 20px">In school, I was a design lead in <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University,</a> as well as a student researcher in the Communication and Technology Lab studying the potential of language-learning through personalized chat-robots. For fun, I am a member of Breadmaking Club and I also lead a pottery studio!</a>
                 </h6>
                 <h6 style="margin-bottom: 20px">In my free time, I like to read Nabokov, hike, make pottery, and explore local art museums with my DSLR.
                 </h6>
@@ -136,7 +136,7 @@
 <style scoped>
 
 .avatar{
-  width:400px;
+  width:450px;
 }
 
 @media only screen and (max-width: 480px) {
