--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Jintana Cunningham</title>
-  <meta name="description" content="Aspiring Designer">
+  <meta name="description" content="Designer">
   <meta property="og:image" content="images/favicon.png">
   <meta property="og:title" content="Jintana Cunningham">
   <meta name="author" content="">
@@ -111,11 +111,11 @@
                   <h5 class="u-dark" style="margin-bottom: 20px">About</h5>
                 <!-- <h6 style="margin-bottom: 20px">Hello!
                 </h6> -->
-                <h6 style="margin-bottom: 20px">Hi there! I'm Jintana Cunningham, a senior at Cornell studying Information Science with a focus on User Experience and Interactive Technology, previous intern at <a href = "https://www.iqvia.com/">IQVIA</a> and <a href = "http://bankofamerica.com">Bank of America.</a>
+                <h6 style="margin-bottom: 20px">Hi there! I'm Jintana Cunningham, a UX designer at <a href = "https://www.microsoft.com/en-us">Microsoft</a>. In 2020 I graudated from Cornell where I studied Information Science with a focus on User Experience and Interactive Technology. Previous intern at <a href = "https://www.iqvia.com/">IQVIA</a> and <a href = "http://bankofamerica.com">Bank of America.</a>
                 </h6>
                 <!-- <h6 style="margin-bottom: 20px"> I taught myself the know-how to make this website in the summer of 2017, and I have been tinkering with digital interfaces ever since.
                 </h6> -->
-                <h6 style="margin-bottom: 20px">In school, I was a design lead in <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University,</a> as well as a student researcher in the Communication and Technology Lab studying the potential of language-learning through personalized chat-robots. For fun, I am a member of Breadmaking Club and I also lead a pottery studio!</a>
+                <h6 style="margin-bottom: 20px">In school, I was a design lead in <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University,</a> as well as a student researcher in the Communication and Technology Lab studying the potential of language-learning through personalized chat-robots. For fun, I was a member of Breadmaking Club and I also led a pottery studio!</a>
                 </h6>
                 <h6 style="margin-bottom: 20px">In my free time, I like to read Nabokov, hike, make pottery, and explore local art museums with my DSLR.
                 </h6>
