--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </a>
           <!-- <h4 style="margin-bottom:35px">Aspiring UX designer studying Information Science at Cornell 👩🏻‍💻</h4> -->
           <div class="text-center">
-          <h4 class = "long" style="margin-bottom:35px;">Aspiring <span id="type"></span><span id="blinker">|</span> studying Information Science at Cornell 👩🏻‍💻</h4>
+          <h4 class = "long" style="margin-bottom:35px;"><span id="type"></span><span id="blinker">|</span> designing at Microsoft 👩🏻‍💻</h4>
           </div>
 
           <ul class="header-links--inline">
@@ -175,7 +175,7 @@
                             </div>
 
 
-                        
+
 
 
                       <div class="section-work grow" style="background-color:#FCFCFC">
@@ -289,7 +289,7 @@
                   <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017 - Present
                   </h6>
 
-                  <h6 style="margin-bottom: 20px"> I was accepted to the CUSD project team at Cornell University in 2017 and I am currently leading their design team.
+                  <h6 style="margin-bottom: 20px"> I was accepted to the CUSD project team at Cornell University in 2017 and I led their design team.
                   </h6>
                   <a class="button underline" href="cusd">View</a>
 
@@ -558,7 +558,7 @@ class Typewriter {
     this.interval = setInterval(function () { self.addLetters(); }, this.period);
   }
 }
-var type = new Typewriter('type', ["UX Designer", "Product Manager"]);
+var type = new Typewriter('type', ["UX Designer", "Plant mom","Pottery Enthusiast"]);
 type.type();
 </script>
 
