--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                           <h5 class="u-dark" style="margin-bottom: 10px">Microsoft</h5>
                                           <h6 class="u-grey" style="margin-bottom: 20px">Summer 2020
                                           </h6>
-                                          <h6 style="margin-bottom: 20px"> Incoming UX Consultant</h6>
+                                          <h6 style="margin-bottom: 20px"> UX Consultant</h6>
                                           <!-- <a class="button" href="projtracker.html">View</a> -->
                                           <!-- <a class="button underline" href="datavis.html">View</a> -->
                                           <h6 style="margin-bottom: 20px">Report coming soon.
