--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                                         </div>
                                         <div class="six offset-by-two columns">
                                           <h5 class="u-dark" style="margin-bottom: 10px">Microsoft</h5>
-                                          <h6 class="u-grey" style="margin-bottom: 20px">Summer 2020
+                                          <h6 class="u-grey" style="margin-bottom: 20px">Summer 2020 - Present
                                           </h6>
-                                          <h6 style="margin-bottom: 20px"> UX Consultant</h6>
+                                          <h6 style="margin-bottom: 20px"> UX Designer</h6>
                                           <!-- <a class="button" href="projtracker.html">View</a> -->
                                           <!-- <a class="button underline" href="datavis.html">View</a> -->
                                           <h6 style="margin-bottom: 20px">Report coming soon.
